2006-08-04  Roger Leigh  <rleigh@whinlatter.ukfsn.org>

	* All Makefile.am
	(DEFS): Don't use -DGETTEXT_PACKAGE.

	* All sources not using the sbuild namespace import sbuild::_ and
	sbuild::N_ where needed.

	* schroot/schroot-base-run.h): Use SBUILD_MESSAGE_CATALOGUE in
	place of GETTEXT_PACKAGE.  Use sbuild::log_unknown_exception_error
	instead of calling log_error directly.

	* sbuild/sbuild-i18n.h
	(gettext, _, gettext_noop, N_): These are all inline functions in
	the sbuild namespace instead of global macros.  gettext uses
	dgettext with SBUILD_MESSAGE_CATALOGUE.
	Remove completed TODO item.

	* sbuild/sbuild-config.h.in
	(SBUILD_MESSAGE_CATALOGUE): New macro, defining the message
	catalogue name.

	* sbuild/sbuild-log.cc
	(log_unknown_exception_error): New function to log an error
	message for unknown exceptions.

2006-08-04  Roger Leigh  <rleigh@debian.org>

	* schroot/schroot-releaselock-main.cc
	(action_releaselock): Capitalise PID.

2006-08-04  Roger Leigh  <rleigh@debian.org>

	* sbuild/sbuild-chroot-config.h (error_code): Remove unused
	DIR_OPEN enum.

	* sbuild/sbuild-chroot-config.cc (add_config_directory): Use
	sbuild::dirstream in place of opendir/readdir/closedir.

2006-08-03  Roger Leigh  <rleigh@debian.org>

	* sbuild/sbuild-run-parts.h, sbuild/sbuild-session.h: Remove
	completed TODO items.

	* sbuild/sbuild-session.cc (wait_for_child): Use waitpid in place
	of wait.

	* sbuild/sbuild-run-parts.cc (wait_for_child): Use waitpid in
	place of wait.

2006-08-03  Roger Leigh  <rleigh@debian.org>

	* sbuild/sbuild-chroot.cc
	(set_location): Be less strict when validating the location;
	strict validation is already performed in derived chroot types.
	This prevents errors when reading the session configuration.

2006-08-02  Luk Claes  <luk@debian.org>

	* po/sv.po: Update Swedish translation.

2006-08-01  Roger Leigh  <rleigh@debian.org>

	* sbuild/sbuild-auth.h (sbuild): Document that the environment