@@ -35,7 +35,7 @@
 #include <boost/format.hpp>
 
 using std::endl;
-using sbuild::N_;
+using sbuild::_;
 using boost::format;
 using schroot::options_base;
 using namespace dchroot;
@@ -44,7 +44,7 @@ main::main (schroot::options_base::ptr& options):
   main_base("dchroot",
 	    // TRANSLATORS: '...' is an ellipsis e.g. U+2026, and '-'
 	    // is an em-dash.
-	    N_("[OPTION...] [COMMAND] - run command or shell in a chroot"),
+	    _("[OPTION...] [COMMAND] - run command or shell in a chroot"),
 	    options)
 {
 }
