@@ -1,4 +1,15 @@
-2006-08-04  Roger Leigh  <rleigh@whinlatter.ukfsn.org>
+2006-08-05  Roger Leigh  <rleigh@debian.org>
+
+	* schroot/schroot-main.cc, schroot/schroot-listmounts-main.cc,
+	schroot/schroot-releaselock-main.cc, dchroot/dchroot-main.cc,
+	dchroot-dsa/dchroot-dsa-main.cc: Translate program usage message
+	in place.
+
+	* schroot/schroot-base-main.cc
+	(action_help): Don't translate the program usage message.  The
+	usage text provided should already be translated.
+
+2006-08-04  Roger Leigh  <rleigh@debian.org>
 
 	* All Makefile.am
 	(DEFS): Don't use -DGETTEXT_PACKAGE.
